[feature/GH-81-install-nullaway-with-error-pr]: feat: Integrate NullAway and Error Prone for static analysis; update CQRSAutoConfiguration and CQRSHandlerRegistrar for BeanFactory usage (#86)